--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>World Clock</h1>
     <footer>
       This project was coded with ❤️ by Madi Bennett and is
-      <a href="#" target="_blank">open sourced by GitHub</a>
+      <a href="https://github.com/madeleinebennett4/world-clock" target="_blank"
+        >open sourced by GitHub</a
+      >
     </footer>
     <script src="javascript/index.js"></script>
   </body>
