--- a/index.html
+++ b/index.html
@@ -7,7 +7,26 @@
     <title>World Clock - Madeleine Bennett</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">Bangalore</option>
+        <option value="">Rio de Janeiro</option>
+        <option value="">Seoul</option>
+      </select>
+      <div class="city">
+        <h2>San Diego</h2>
+        <div class="date">12th September 2023</div>
+        <div class="time">14:44:04</div>
+      </div>
+      <div class="city">
+        <h2>Rome</h2>
+        <div class="date">12th September 2023</div>
+        <div class="time">14:44:04</div>
+      </div>
+    </div>
     <footer>
       This project was coded with ❤️ by Madi Bennett and is
       <a href="https://github.com/madeleinebennett4/world-clock" target="_blank"
