--- a/index.html
+++ b/index.html
@@ -17,18 +17,22 @@
         <option value="">Seoul</option>
       </select>
       <div class="city">
-        <h2>San Diego</h2>
-        <div class="date">12th September 2023</div>
-        <div class="time">14:44:04</div>
+        <div>
+          <h2>San Diego</h2>
+          <div class="date">12th September 2023</div>
+        </div>
+        <div class="time">10:44:04 <small>AM</small></div>
       </div>
       <div class="city">
-        <h2>Rome</h2>
-        <div class="date">12th September 2023</div>
-        <div class="time">14:44:04</div>
+        <div>
+          <h2>Paris</h2>
+          <div class="date">12th September 2023</div>
+        </div>
+        <div class="time">10:44:04 <small>AM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded with ❤️ by Madi Bennett and is
+      This project was coded with ❤️ by <strong>Madi Bennett</strong> and is
       <a href="https://github.com/madeleinebennett4/world-clock" target="_blank"
         >open sourced by GitHub</a
       >
