added moment & moment timezone, updated js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.js"></script>
     <title>World Clock - Madeleine Bennett</title>
   </head>
   <body>
@@ -16,19 +18,19 @@
         <option value="">Rio de Janeiro</option>
         <option value="">Seoul</option>
       </select>
-      <div class="city">
+      <div class="city" id="san-diego">
         <div>
           <h2>San Diego</h2>
-          <div class="date">12th September 2023</div>
+          <div class="date"></div>
         </div>
-        <div class="time">10:44:04 <small>AM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="rome">
         <div>
-          <h2>Paris</h2>
-          <div class="date">12th September 2023</div>
+          <h2>Rome</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">10:44:04 <small>AM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
