--- a/index.html
+++ b/index.html
@@ -11,26 +11,27 @@
   <body>
     <div class="container">
       <h1>World Clock</h1>
-      <select>
+      <select id="city">
         <option value="">Select a city...</option>
-        <option value="">London</option>
-        <option value="">Bangalore</option>
-        <option value="">Rio de Janeiro</option>
-        <option value="">Seoul</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Asia/Seoul">Seoul</option>
       </select>
-      <div class="city" id="san-diego">
-        <div>
-          <h2>San Diego</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="rome">
-        <div>
-          <h2>Rome</h2>
-          <div class="date"></div>
+        <div class="city" id="rome">
+          <div>
+            <h2>Rome</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
     <footer>
