added current location, included more cities in drop down

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
       <h1>World Clock</h1>
       <select id="city">
         <option value="">Select a city...</option>
-        <option value="Europe/London">London</option>
+        <option value="current">My location</option>
+        <option value="Asia/Calcutta">Calcutta</option>
+        <option value="Europe/Istanbul">Istanbul</option>
         <option value="America/New_York">New York</option>
+        <option value="America/Sao_Paulo">Sao Paulo</option>
         <option value="Asia/Seoul">Seoul</option>
       </select>
       <div id="cities">
