--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="css/styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.43/moment-timezone-with-data-1970-2030.js"></script>
-    <title>World Clock - Madeleine Bennett</title>
+    <title>World Clock - Madi Bennett</title>
   </head>
   <body>
     <div class="container">
-      <h1>World Clock</h1>
+      <h1><a href="/">World Clock </a></h1>
       <select id="city">
         <option value="">Select a city...</option>
         <option value="current">My location</option>
