added homepage link

--- a/index.html
+++ b/index.html
@@ -10,17 +10,22 @@
   </head>
   <body>
     <div class="container">
-      <h1><a href="/">World Clock </a></h1>
+      <h1>World Clock</h1>
       <select id="city">
         <option value="">Select a city...</option>
         <option value="current">My location</option>
-        <option value="Asia/Calcutta">Calcutta</option>
         <option value="Europe/Istanbul">Istanbul</option>
-        <option value="America/New_York">New York</option>
         <option value="America/Sao_Paulo">Sao Paulo</option>
         <option value="Asia/Seoul">Seoul</option>
       </select>
       <div id="cities">
+        <div class="city" id="colombo">
+          <div>
+            <h2>Colombo</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
+        </div>
         <div class="city" id="los-angeles">
           <div>
             <h2>Los Angeles</h2>
